<resources>
    <string name="app_name">GameHub</string>
    <string name="profile_avatar">Avatar de perfil</string>
    <string name="cart">Carrito</string>
    <string name="profile">Perfil</string>
    <string name="product_image">Imagen del producto</string>
    <string name="add_to_cart">Agregar al carrito</string>
    <string name="store_image">Imagen de la tienda</string>
    <string name="home">Inicio</string>
    <string name="catalog">Catálogo</string>
    <string name="game_image_description">Descripción de la imagen del juego</string>
    <string name="panel_administracion">Panel de Administración</string>
    <string name="gestionar_productos">Gestionar Productos</string>
    <string name="gestionar_usuarios">Gestionar Usuarios</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta? Regístrate</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="telefono">Teléfono (Opcional)</string>
    <string name="direccion">Dirección (Opcional)</string>
    <string name="fecha_nacimiento">Fecha de nacimiento (Opcional)</string>
    <string name="registrarse">Registrarse</string>
    <string name="tienes_cuenta">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="nombre_juego">Nombre del juego</string>
    <string name="categoria">Categoría</string>
    <string name="precio">Precio</string>
    <string name="cantidad_stock">Cantidad en stock</string>
    <string name="descripcion_juego">Descripción del juego</string>
    <string name="guardar">Guardar</string>
    <string name="gestion_productos">Gestión de Productos</string>
    <string name="buscar_producto">Buscar producto...</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="reportes_estadisticas">Reportes y Estadísticas</string>
    <string name="ventas_totales">Ventas Totales</string>
    <string name="ventas">$124,560</string>
    <string name="usuarios_activos">Usuarios Activos</string>
    <string name="users_activos">1,250</string>
    <string name="productos_vendidos">Productos Vendidos</string>
    <string name="products_sale">3,480</string>
    <string name="configuracion_sistema">Configuración del sistema</string>
    <string name="preferencias_generales">Preferencias generales</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="seguridad_privacidad">Seguridad y privacidad</string>
    <string name="centro_ayuda">Centro de ayuda</string>
    <string name="acerca_gamehub">Acerca de GameHub</string>
    <string name="gestion_usuarios">Gestión de Usuarios</string>
    <string name="buscar_usuario">Buscar usuario...</string>
    <string name="agregar_usuario">Agregar usuario</string>
    <string name="nueva_tarjeta">Añadir Nueva Tarjeta</string>
    <string name="nombre_titular">Nombre del Titular</string>
    <string name="numero_tarjeta">Número de Tarjeta</string>
    <string name="mes_ano">MM/AA</string>
    <string name="cvv">CVV</string>
    <string name="guardar_tarjeta">Guardar Tarjeta</string>
    <string name="tu_carrito">Tu carrito</string>
    <string name="subtotal">Subtotal</string>
    <string name="sub_total">$119.98</string>
    <string name="impuestos">Impuestos</string>
    <string name="impuestos_v">$22.80</string>
    <string name="total">Total</string>
    <string name="total_v">$142.78</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="buscar_catalogo">Buscar en catálogo...</string>
    <string name="todos">Todos</string>
    <string name="playstation">PlayStation</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="confirmar_nueva_contrasena">Confirmar nueva contraseña</string>
    <string name="actualizar_contrasena">Actualizar contraseña</string>
    <string name="resumen_compra">Resumen de compra</string>
    <string name="direccion_envio">Dirección de envío</string>
    <string name="calle_numero_ciudad">Calle, número, ciudad</string>
    <string name="metodo_pago">Método de pago</string>
    <string name="sub_v">$119.98</string>
    <string name="tot_v">$142.78</string>
    <string name="confirmar_compra">Confirmar compra</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="fecha_nacimiento_dd">Fecha de nacimiento (dd/mm/aaaa)</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="descripcion">Descripción</string>
    <string name="mecanicas_caracteristicas">Aquí iría una descripción detallada del juego, explicando su historia, mecánicas y características principales para atraer al comprador.</string>
    <string name="buscar_juegos">Buscar juegos...</string>
    <string name="recomendados">Recomendados</string>
    <string name="ultimos_lanzamientos">Últimos lanzamientos</string>
    <string name="pedido_v">Pedido #12345</string>
    <string name="fecha_v">Fecha: 05/10/2025</string>
    <string name="estado_v">Estado: Entregado</string>
    <string name="productos_comprados">Productos comprados</string>
    <string name="no_metodos_pago">No tienes métodos de pago guardados.\n¡Añade uno nuevo!</string>
    <string name="anadir_nuevo_metodo">Añadir nuevo método de pago</string>
    <string name="titulo_juego">Título del juego</string>
    <string name="pc_accion">PC • Acción</string>
    <string name="calificacion_stars">★ 4.5</string>
    <string name="precio_v">$59.99</string>
    <string name="descripcion_v">Descripción larga del juego...</string>
    <string name="cantidad_v">1</string>
    <string name="agregar_carrito">Agregar al carrito</string>
    <string name="name_profile_v">John Doe</string>
    <string name="email_v">john.doe@email.com</string>
    <string name="cuenta">Cuenta</string>
    <string name="historial_compras">Historial de compras</string>
    <string name="metodos_pago">Métodos de pago</string>
    <string name="tiendas_cercanas">Tiendas cercanas</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="gamehub_version">GameHub v1.0</string>
    <string name="mapa_simulado">Mapa (simulado)</string>
    <string name="nombre_producto">Nombre del producto</string>
    <string name="producto_v">$0.00</string>
    <string name="editar_producto">Editar producto</string>
    <string name="eliminar_producto">Eliminar producto</string>
    <string name="nombre_usuario">Nombre del usuario</string>
    <string name="email_ejemplo">email@ejemplo.com</string>
    <string name="rol_cliente">Rol: cliente</string>
    <string name="editar_usuario">Editar usuario</string>
    <string name="eliminar_usuario">Eliminar usuario</string>
    <string name="restar_uno">Restar uno</string>
    <string name="anadir_uno">Añadir uno</string>
    <string name="estado_entregado">Estado: Entregado</string>
    <string name="total_precio">Total: $142.78</string>
    <string name="cantidad_c">Cantidad: 2</string>
    <string name="icono_metodo_pago">Icono del método de pago</string>
    <string name="eliminar_metodo_pago">Eliminar método de pago</string>
    <string name="disponible">Disponible</string>
    <string name="gamehub_centro">GameHub Centro</string>
    <string name="tienda_dir">Av. Libertador 1234</string>
    <string name="distancia_v">0.8 km</string>
    <string name="ver_mas">Ver más</string>
    <string name="nombre_del_usuario">Nombre del Usuario</string>
    <string name="usuario_email">usuario@email.com</string>
    <string name="historial_de_pedidos">Historial de pedidos</string>
</resources>