<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:textSize="24sp"
            android:fontFamily="@font/inter_18pt_bold"
            android:textColor="@color/black"
            android:layout_marginBottom="32dp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            android:drawableStart="@drawable/ic_profile"
            android:padding="12dp"
            android:background="@drawable/edittext_background" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electronico"
            android:drawableStart="@drawable/ic_profile"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:drawableStart="@drawable/ic_password"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/direccion"
            android:inputType="textPostalAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/fecha_nacimiento"
            android:inputType="date"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_marginTop="24dp"
            style="@style/Widget.GameHub.Button.Primary" />

        <TextView
            android:id="@+id/tvGoToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tienes_cuenta"
            android:textColor="@color/color_primary"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
