<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="12dp"
    android:background="@color/color_surface"
    android:elevation="2dp">

    <TextView
        android:id="@+id/tvOrderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedido_v"
        android:fontFamily="@font/inter_18pt_bold"
        android:textColor="@color/text_primary" />

    <TextView
        android:id="@+id/tvOrderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_v"
        android:fontFamily="@font/inter_18pt_regular"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/tvOrderStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado_entregado"
        android:fontFamily="@font/inter_18pt_regular"
        android:textColor="@color/color_primary"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/tvOrderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_precio"
        android:fontFamily="@font/inter_18pt_bold"
        android:textColor="@color/text_primary"
        android:layout_marginTop="8dp" />

</LinearLayout>
