<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/changePassScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_contrasena"
            android:textSize="20sp"
            android:fontFamily="@font/orbitron_bold"
            android:textColor="@color/text_primary"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena_actual"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nueva_contrasena"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_nueva_contrasena"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnUpdatePassword"
            style="@style/Widget.GameHub.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/actualizar_contrasena"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>
